[tool.poetry]
name = "cabpricepredictions"
version = "0.1.0"
description = ""
authors = ["Tom Dawson <tomdawson720@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
pylint = "^2.15.3"
pytest = "^7.1.3"
pre-commit = "^2.20.0"
black = "^22.3.0"
DateTime = "^4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
